Fixed overlapping notifications

--- a/code/ui/Hud.scss
+++ b/code/ui/Hud.scss
@@ -13,5 +13,6 @@
 .notification-wrapper {
     position: absolute;
     width: 100%;
-    height: 100%;
+
+    flex-direction: column;
 }
